fix(RR-256): complete implementation - event propagation fix and IOSButton retirement
- Fixed summary button event propagation issues
- Retired IOSButton component in favor of ArticleActionButton
- Implemented per-article locking for content deduplication
- Fixed API URL construction using NEXT_PUBLIC_APP_URL
- Added DOMPurify sanitization for XSS protection
- Optimized database queries with article caching
- Added proper queue timeout handling (60 seconds)
- Enhanced API response with content_source field

Technical improvements:
- Replaced semaphore-only approach with per-article locks
- Fixed race condition in concurrent content fetching
- Proper cleanup of article locks after processing
- Server-side HTML sanitization with comprehensive config
- Cached article data to prevent redundant DB queries

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
+    "dompurify": "^3.2.6",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "he": "^1.2.0",
